# ext-crud-rs

./: Cargo.toml  Makefile  README.md
.github/workflows/: publish.yml
examples/: basic_usage.rs  setup_api_key.rs
ext-crud-derive/: Cargo.toml
ext-crud-derive/src/: lib.rs
src/: lib.rs  traits.rs
src/clients/: client.rs  supabase.rs
src/entity/: extend.rs  mod.rs
src/supabase/: supabase.rs
supabase/: config.toml
supabase/migrations/: 20241006152715_create_for_example_basic_usage.sql
