[package]
name = "ext-crud-rs"
version = "0.1.3"
edition = "2021"
authors = ["Yutaka Nishimura <ytk.nishimura@gmail.com>"]
description = "ext-crud-rs is a library to provide CRUD operations."
documentation = "https://docs.rs/ext-crud-rs"
license = "MIT"
repository = "https://github.com/ynishi/ext-crud-rs"
readme = "README.md"

[dependencies]
ext-crud-derive = { path = "./ext-crud-derive", optional = true, version = "0.1.1" }
anyhow = "1.0.89"
async-trait = "0.1.83"
postgrest = "1.6.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
uuid = { version = "1.10.0", features = ["v4", "serde"] }
tokio = { version = "1.40.0", features = ["full"] }
log = "0.4.22"


[workspace]
members = ["ext-crud-derive"]

[[example]]
name = "basic_usage"
required-features = ["derive"]

[features]
default = []
derive = ["ext-crud-derive"]
full = ["derive"]
