[package]
name = "ext-crud-derive"
version = "0.1.0"
edition = "2021"
authors = ["Yutaka Nishimura <ytk.nishimura@gmail.com>"]
description = "Derive macros for ext-crud-rs"
license = "MIT"
repository = "https://github.com/ynishi/ext-crud-rs"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.86"
quote = "1.0.37"
syn = "2.0.79"
